--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^1.11.0",
-    "magic-sdk": "^3.0.1",
-    "next": "10.0.1",
+    "axios": "^0.21.1",
+    "magic-sdk": "^4.1.1",
+    "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
